// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Should match snapshot for !hasLabelInside 1`] = `
<Fragment>
  <Styled(label)
    focused={true}
    hasLabelInside={false}
  >
    Password
  </Styled(label)>
  <Styled(div)
    focused={true}
  >
    <Styled(div)
      focused={true}
      hasLabelInside={false}
    >
      <Styled(input)
        focused={true}
        hasLabelInside={false}
        onBlur={[Function]}
        onChange={[MockFunction]}
        onFocus={[Function]}
        type="password"
        value="mypassword"
      />
    </Styled(div)>
    <Styled(div)
      active={true}
      onClick={[Function]}
    >
      <Styled(p)>
        SHOW
      </Styled(p)>
      <Styled(Eye)
        viewBox="0 0 24 14"
        xmlns="http://www.w3.org/2000/svg"
      />
    </Styled(div)>
  </Styled(div)>
</Fragment>
`;

exports[`Input Should match snapshot for password input 1`] = `
<Fragment>
  <Styled(label)
    focused={true}
    hasLabelInside={false}
  >
    Password
  </Styled(label)>
  <Styled(div)
    focused={true}
  >
    <Styled(div)
      focused={true}
      hasLabelInside={false}
    >
      <Styled(input)
        focused={true}
        hasLabelInside={false}
        onBlur={[Function]}
        onChange={[MockFunction]}
        onFocus={[Function]}
        type="password"
        value="mypassword"
      />
    </Styled(div)>
    <Styled(div)
      active={true}
      onClick={[Function]}
    >
      <Styled(p)>
        SHOW
      </Styled(p)>
      <Styled(Eye)
        viewBox="0 0 24 14"
        xmlns="http://www.w3.org/2000/svg"
      />
    </Styled(div)>
  </Styled(div)>
</Fragment>
`;

exports[`Input Should match snapshot for text input 1`] = `
<Fragment>
  <Styled(label)
    focused={true}
    hasLabelInside={false}
  >
    Mail
  </Styled(label)>
  <Styled(div)
    focused={true}
  >
    <Styled(div)
      focused={true}
      hasLabelInside={false}
    >
      <Styled(input)
        focused={true}
        hasLabelInside={false}
        onBlur={[Function]}
        onChange={[MockFunction]}
        onFocus={[Function]}
        type="text"
        value="test@es.com"
      />
    </Styled(div)>
  </Styled(div)>
</Fragment>
`;
